fix: fix z-index for soldout layout

--- a/source/sass/blocks/package.scss
+++ b/source/sass/blocks/package.scss
@@ -96,7 +96,7 @@
   -webkit-backdrop-filter: blur(2.5px);
   backdrop-filter: blur(2.5px);
   border-radius: 30px;
-  z-index: 1000;
+  z-index: 10;
 
   @include vp-767 {
     border-radius: 20px;
