--- a/source/sass/blocks/tickets.scss
+++ b/source/sass/blocks/tickets.scss
@@ -235,7 +235,7 @@ h4.tickets__title-s {
   -webkit-backdrop-filter: blur(2.5px);
   backdrop-filter: blur(2.5px);
   border-radius: 30px;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .tickets__soldout p {
